blog spacing fix

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -518,10 +518,13 @@ a.card-rollover {
 			}
 			.card-body {
 				@include media-breakpoint-down(phone) {
-					height: 70px;
+					height: 30px; //70px;
+				}
+				@include media-breakpoint-down(tablet) {
+					height:70px;
 				}
 
-				height: 130px;
+				height: 90px;//130px
 				padding-top: .50rem;
 				padding: 0;
 				//background-color: red;
